fix: global site dark mode bg color

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,7 +8,7 @@ body {
 }
 
 body.dark {
-  @apply bg-slate-800;
+  @apply bg-slate-900;
   @apply text-slate-100;
 }
 
